Adicionada exceção para aluno não encontrado por nome.